// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Header checkGrammar 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkGrammar 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkGrammar 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkGrammar 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkHighlight 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkHighlight 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkHighlight 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkHighlight 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkSpaces 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkSpaces 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkSpaces 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header checkSpaces 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header className 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header my-classname uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="default"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-default uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="red"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-red uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="red"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-red uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="red-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-red-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 5`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="red-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-red-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 6`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="green"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-green uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 7`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="green"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-green uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 8`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="green-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-green-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 9`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="green-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-green-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 10`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="yellow"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-yellow uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 11`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="yellow"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-yellow uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 12`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="yellow-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-yellow-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 13`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="yellow-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-yellow-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 14`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="purple"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-purple uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 15`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="purple"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-purple uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 16`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="purple-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-purple-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 17`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="purple-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-purple-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 18`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="brown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-brown uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 19`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="brown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-brown uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 20`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="brown-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-brown-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 21`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="brown-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-brown-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 22`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="orange"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-orange uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 23`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="orange"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-orange uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 24`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="orange-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-orange-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 25`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="orange-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-orange-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 26`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="cyan"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-cyan uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 27`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="cyan"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-cyan uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 28`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="cyan-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-cyan-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 29`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="cyan-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-cyan-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 30`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="grey"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-grey uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 31`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="grey"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-grey uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 32`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="grey-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-grey-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 33`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="grey-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-grey-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 34`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-pink uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 35`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-pink uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 36`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="pink-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-pink-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 37`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="pink-rich"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-pink-rich uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header colorSchema 38`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema="pink"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "color-schema-pink uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header content 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  >
    12345
  </h1>
</Jumbotron>
`;

exports[`UU5.Bricks.Header content 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </h1>
</Jumbotron>
`;

exports[`UU5.Bricks.Header content 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </h1>
</Jumbotron>
`;

exports[`UU5.Bricks.Header content 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  >
    12345
  </h1>
</Jumbotron>
`;

exports[`UU5.Bricks.Header controlled 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header controlled 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header controlled 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header controlled 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header default props 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header disabled 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-disabled uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header disabled 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header disabled 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header disabled 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-disabled uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header docKit examples UU5.Bricks.Header should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID07"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 0"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID01"
    ignoreInnerHTML={false}
    key="uuID01"
    level="0"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 1"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level="1"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 2"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    level="2"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 3"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    level="3"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 4"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID05"
    ignoreInnerHTML={false}
    key="uuID05"
    level="4"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 5"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level="5"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 6"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID07"
    ignoreInnerHTML={false}
    key="uuID07"
    level="6"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Header docKit examples UU5.Bricks.Header should render without crash 2`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 0"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    level="0"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 1"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    level="1"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 2"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    level="2"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 3"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID05"
    ignoreInnerHTML={false}
    key="uuID05"
    level="3"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 4"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID06"
    ignoreInnerHTML={false}
    key="uuID06"
    level="4"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 5"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID07"
    ignoreInnerHTML={false}
    key="uuID07"
    level="5"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
  <Header
    className={null}
    colorSchema={null}
    content="Header - Level 6"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID08"
    ignoreInnerHTML={false}
    key="uuID08"
    level="6"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={true}
  />
</div>
`;

exports[`UU5.Bricks.Header dynamic 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header dynamic 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header dynamic 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header dynamic 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header hidden 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={true}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-hidden uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header hidden 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header hidden 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header hidden 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={true}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-hidden uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header id 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="myId"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "myId",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header ignoreHTML 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header ignoreHTML 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header ignoreHTML 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header ignoreHTML 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header level 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header level 2`] = `
<h1
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 3`] = `
<h1
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 4`] = `
<h2
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 5`] = `
<h2
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 6`] = `
<h3
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 7`] = `
<h3
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 8`] = `
<h4
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 9`] = `
<h4
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 10`] = `
<h5
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 11`] = `
<h5
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 12`] = `
<h6
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 13`] = `
<h6
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 14`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header level 15`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header level 16`] = `
<h1
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 17`] = `
<h1
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 18`] = `
<h2
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 19`] = `
<h2
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 20`] = `
<h3
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 21`] = `
<h3
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 22`] = `
<h4
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 23`] = `
<h4
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 24`] = `
<h5
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 25`] = `
<h5
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 26`] = `
<h6
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 27`] = `
<h6
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header level 28`] = `
<h5
  className="uu5-bricks-header uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Header mainAttrs 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header name 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "name": "myName",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 5`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 6`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 7`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 8`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 9`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 10`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 11`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 12`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 13`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 14`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Header nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Header nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Header nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Header nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Header nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Header noIndex 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-noindex uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header noIndex 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header noIndex 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header noIndex 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-noindex uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header pureRender 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header pureRender 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header pureRender 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header pureRender 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header selected 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-selected uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header selected 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header selected 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header selected 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-selected uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header style 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {
        "borderRadius": "2px",
        "padding": "8px",
      },
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header style 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {
        "backgroundColor": "red",
        "color": "blue",
      },
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header style 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {
        "backgroundColor": "red",
        "color": "blue",
      },
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header style 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {
        "borderRadius": "2px",
        "padding": "8px",
      },
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header textCorrector 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header textCorrector 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header textCorrector 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header textCorrector 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header tooltip 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header underline 1`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header underline 2`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header underline 3`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;

exports[`UU5.Bricks.Header underline 4`] = `
<Jumbotron
  bgStyle="filled"
  borderRadius={null}
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "className": "uu5-bricks-header uu5-common-text",
      "id": "uuID",
      "style": Object {},
      "title": null,
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <h1
    className="uu5-bricks-header-jumbotron-content uu5-common-text"
  />
</Jumbotron>
`;
